// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instantiate a ViewBill class 1`] = `
Object {
  "id": "test",
}
`;

exports[`test a ViewBill DOM manipulation 1`] = `
<div
  class="test-div"
/>
`;

exports[`test a ViewBill DOM manipulation 2`] = `
<div
  class="new-class"
>
  <span>
    ViewBill entry
  </span>
</div>
`;

exports[`test a ViewBill DOM return 1`] = `
<div>
  <h1>
    Hello world
  </h1>
</div>
`;

exports[`test add person button 1`] = `
<button
  class="addPersonBtn"
>
  Add Person
</button>
`;

exports[`test default input amount box 1`] = `
<div
  class="totalBill"
>
  <label
    for="amountInp"
  >
    Enter total bill to split:
  </label>
  <input
    class="input-total"
    name="amountInp"
    placeholder="Enter amount"
    type="number"
    value="0"
  />
</div>
`;

exports[`test input amount box 1`] = `
<div
  class="totalBill"
>
  <label
    for="amountInp"
  >
    Enter total bill to split:
  </label>
  <input
    class="input-total"
    name="amountInp"
    placeholder="Enter amount"
    type="number"
    value="100"
  />
</div>
`;

exports[`test person DOM does not update 1`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <input
    <=""
    class="p-amount"
    input=""
    placeholder="10"
    type="number"
  />
  <select>
    <option
      value="split"
    >
      split
    </option>
    <option
      selected=""
      value="more"
    >
      more
    </option>
    <option
      value="less"
    >
      less
    </option>
    <option
      value="fixed"
    >
      fixed
    </option>
  </select>
  <span
    p-id="1462361249717"
  >
    Share: -
  </span>
  <button>
    X
  </button>
</li>
`;

exports[`test person DOM does not update 2`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <input
    <=""
    class="p-amount"
    input=""
    placeholder="10"
    type="number"
  />
  <select>
    <option
      value="split"
    >
      split
    </option>
    <option
      selected=""
      value="more"
    >
      more
    </option>
    <option
      value="less"
    >
      less
    </option>
    <option
      value="fixed"
    >
      fixed
    </option>
  </select>
  <span
    p-id="1462361249717"
  >
    Share: -
  </span>
  <button>
    X
  </button>
</li>
`;

exports[`test person DOM update 1`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <input
    <=""
    class="p-amount"
    input=""
    placeholder="10"
    type="number"
  />
  <select>
    <option
      value="split"
    >
      split
    </option>
    <option
      selected=""
      value="more"
    >
      more
    </option>
    <option
      value="less"
    >
      less
    </option>
    <option
      value="fixed"
    >
      fixed
    </option>
  </select>
  <span
    p-id="1462361249717"
  >
    Share: -
  </span>
  <button>
    X
  </button>
</li>
`;

exports[`test person DOM update 2`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <input
    <=""
    class="p-amount"
    input=""
    placeholder="12"
    type="number"
  />
  <select>
    <option
      selected=""
      value="split"
    >
      split
    </option>
    <option
      value="more"
    >
      more
    </option>
    <option
      value="less"
    >
      less
    </option>
    <option
      value="fixed"
    >
      fixed
    </option>
  </select>
  <span
    p-id="1462361249717"
  >
    Share: -
  </span>
  <button>
    X
  </button>
</li>
`;

exports[`test person template injection 1`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <input
    <=""
    class="p-amount"
    input=""
    placeholder="10"
    type="number"
  />
  <select>
    <option
      value="split"
    >
      split
    </option>
    <option
      selected=""
      value="more"
    >
      more
    </option>
    <option
      value="less"
    >
      less
    </option>
    <option
      value="fixed"
    >
      fixed
    </option>
  </select>
  <span
    p-id="1462361249717"
  >
    Share: -
  </span>
  <button>
    X
  </button>
</li>
`;
